@@ -2,17 +2,17 @@ package com.simibubi.create.compat.jei;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
+import javax.annotation.ParametersAreNonnullByDefault;
 
-import com.google.common.base.Predicates;
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.AllFluids;
 import com.simibubi.create.AllItems;
@@ -27,6 +27,7 @@ import com.simibubi.create.compat.jei.category.FanBlastingCategory;
 import com.simibubi.create.compat.jei.category.FanHauntingCategory;
 import com.simibubi.create.compat.jei.category.FanSmokingCategory;
 import com.simibubi.create.compat.jei.category.FanWashingCategory;
+import com.simibubi.create.compat.jei.category.ItemApplicationCategory;
 import com.simibubi.create.compat.jei.category.ItemDrainCategory;
 import com.simibubi.create.compat.jei.category.MechanicalCraftingCategory;
 import com.simibubi.create.compat.jei.category.MillingCategory;
@@ -40,24 +41,40 @@ import com.simibubi.create.compat.jei.category.SawingCategory;
 import com.simibubi.create.compat.jei.category.SequencedAssemblyCategory;
 import com.simibubi.create.compat.jei.category.SpoutCategory;
 import com.simibubi.create.content.contraptions.components.crafter.MechanicalCraftingRecipe;
+import com.simibubi.create.content.contraptions.components.crusher.AbstractCrushingRecipe;
 import com.simibubi.create.content.contraptions.components.deployer.DeployerApplicationRecipe;
+import com.simibubi.create.content.contraptions.components.deployer.ManualApplicationRecipe;
+import com.simibubi.create.content.contraptions.components.fan.HauntingRecipe;
+import com.simibubi.create.content.contraptions.components.fan.SplashingRecipe;
 import com.simibubi.create.content.contraptions.components.press.MechanicalPressTileEntity;
+import com.simibubi.create.content.contraptions.components.press.PressingRecipe;
+import com.simibubi.create.content.contraptions.components.saw.CuttingRecipe;
 import com.simibubi.create.content.contraptions.components.saw.SawTileEntity;
+import com.simibubi.create.content.contraptions.fluids.actors.FillingRecipe;
 import com.simibubi.create.content.contraptions.fluids.potion.PotionFluid;
 import com.simibubi.create.content.contraptions.fluids.recipe.PotionMixingRecipes;
+import com.simibubi.create.content.contraptions.itemAssembly.SequencedAssemblyRecipe;
 import com.simibubi.create.content.contraptions.processing.BasinRecipe;
+import com.simibubi.create.content.contraptions.processing.EmptyingRecipe;
+import com.simibubi.create.content.contraptions.processing.ItemApplicationRecipe;
 import com.simibubi.create.content.curiosities.tools.BlueprintScreen;
+import com.simibubi.create.content.curiosities.tools.SandPaperPolishingRecipe;
 import com.simibubi.create.content.logistics.item.LinkedControllerScreen;
 import com.simibubi.create.content.logistics.item.filter.AbstractFilterScreen;
+import com.simibubi.create.content.logistics.trains.management.schedule.ScheduleScreen;
 import com.simibubi.create.foundation.config.AllConfigs;
 import com.simibubi.create.foundation.config.CRecipes;
 import com.simibubi.create.foundation.config.ConfigBase.ConfigBool;
+import com.simibubi.create.foundation.data.recipe.LogStrippingFakeRecipes;
 import com.simibubi.create.foundation.gui.container.AbstractSimiContainerScreen;
+import com.simibubi.create.foundation.utility.Lang;
 import com.simibubi.create.foundation.utility.recipe.IRecipeTypeInfo;
 
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
-import mezz.jei.api.constants.VanillaRecipeCategoryUid;
+import mezz.jei.api.constants.RecipeTypes;
+import mezz.jei.api.forge.ForgeTypes;
+import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import mezz.jei.api.registration.IGuiHandlerRegistration;
 import mezz.jei.api.registration.IRecipeCatalystRegistration;
@@ -70,168 +87,235 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.CraftingRecipe;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeType;
+import net.minecraft.world.item.crafting.SmokingRecipe;
 import net.minecraft.world.level.ItemLike;
+import net.minecraft.world.level.block.Blocks;
 import net.minecraftforge.common.crafting.IShapedRecipe;
 import net.minecraftforge.fml.ModList;
 
 @JeiPlugin
 @SuppressWarnings("unused")
+@ParametersAreNonnullByDefault
 public class CreateJEI implements IModPlugin {
 
 	private static final ResourceLocation ID = Create.asResource("jei_plugin");
 
-	public IIngredientManager ingredientManager;
 	private final List<CreateRecipeCategory<?>> allCategories = new ArrayList<>();
+	private IIngredientManager ingredientManager;
 
 	private void loadCategories() {
 		allCategories.clear();
+
 		CreateRecipeCategory<?>
 
-		milling = register("milling", MillingCategory::new).addTypedRecipes(AllRecipeTypes.MILLING)
-			.catalyst(AllBlocks.MILLSTONE::get)
-			.build(),
+		milling = builder(AbstractCrushingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.MILLING)
+				.catalyst(AllBlocks.MILLSTONE::get)
+				.doubleItemIcon(AllBlocks.MILLSTONE.get(), AllItems.WHEAT_FLOUR.get())
+				.emptyBackground(177, 53)
+				.build("milling", MillingCategory::new),
 
-			crushing = register("crushing", CrushingCategory::new).addTypedRecipes(AllRecipeTypes.CRUSHING)
+		crushing = builder(AbstractCrushingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.CRUSHING)
 				.addTypedRecipesExcluding(AllRecipeTypes.MILLING::getType, AllRecipeTypes.CRUSHING::getType)
 				.catalyst(AllBlocks.CRUSHING_WHEEL::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.CRUSHING_WHEEL.get(), AllItems.CRUSHED_GOLD.get())
+				.emptyBackground(177, 100)
+				.build("crushing", CrushingCategory::new),
 
-			pressing = register("pressing", PressingCategory::new).addTypedRecipes(AllRecipeTypes.PRESSING)
+		pressing = builder(PressingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.PRESSING)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.MECHANICAL_PRESS.get(), AllItems.IRON_SHEET.get())
+				.emptyBackground(177, 70)
+				.build("pressing", PressingCategory::new),
 
-			washing = register("fan_washing", FanWashingCategory::new).addTypedRecipes(AllRecipeTypes.SPLASHING)
+		washing = builder(SplashingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.SPLASHING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_washing"))
-				.build(),
+				.doubleItemIcon(AllItems.PROPELLER.get(), Items.WATER_BUCKET)
+				.emptyBackground(178, 72)
+				.build("fan_washing", FanWashingCategory::new),
 
-			smoking = register("fan_smoking", FanSmokingCategory::new).addTypedRecipes(() -> RecipeType.SMOKING)
+		smoking = builder(SmokingRecipe.class)
+				.addTypedRecipes(() -> RecipeType.SMOKING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_smoking"))
-				.build(),
+				.doubleItemIcon(AllItems.PROPELLER.get(), Items.CAMPFIRE)
+				.emptyBackground(178, 72)
+				.build("fan_smoking", FanSmokingCategory::new),
 
-			blasting = register("fan_blasting", FanBlastingCategory::new)
+		blasting = builder(AbstractCookingRecipe.class)
 				.addTypedRecipesExcluding(() -> RecipeType.SMELTING, () -> RecipeType.BLASTING)
 				.addTypedRecipes(() -> RecipeType.BLASTING)
 				.removeRecipes(() -> RecipeType.SMOKING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_blasting"))
-				.build(),
+				.doubleItemIcon(AllItems.PROPELLER.get(), Items.LAVA_BUCKET)
+				.emptyBackground(178, 72)
+				.build("fan_blasting", FanBlastingCategory::new),
 
-			haunting = register("fan_haunting", FanHauntingCategory::new).addTypedRecipes(AllRecipeTypes.HAUNTING)
+		haunting = builder(HauntingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.HAUNTING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting"))
-				.build(),
+				.doubleItemIcon(AllItems.PROPELLER.get(), Items.SOUL_CAMPFIRE)
+				.emptyBackground(178, 72)
+				.build("fan_haunting", FanHauntingCategory::new),
 
-			mixing = register("mixing", MixingCategory::standard).addTypedRecipes(AllRecipeTypes.MIXING)
+		mixing = builder(BasinRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.MIXING)
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), AllBlocks.BASIN.get())
+				.emptyBackground(177, 103)
+				.build("mixing", MixingCategory::standard),
 
-			seqAssembly = register("sequenced_assembly", SequencedAssemblyCategory::new)
-				.addTypedRecipes(AllRecipeTypes.SEQUENCED_ASSEMBLY)
-				.build(),
-
-			autoShapeless = register("automatic_shapeless", MixingCategory::autoShapeless)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-					&& r.getIngredients()
-						.size() > 1
-					&& !MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-					BasinRecipe::convertShapeless)
-				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
-				.catalyst(AllBlocks.BASIN::get)
+		autoShapeless = builder(BasinRecipe.class)
 				.enableWhen(c -> c.allowShapelessInMixer)
-				.build(),
+				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
+								&& r.getIngredients()
+								.size() > 1
+								&& !MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+						BasinRecipe::convertShapeless)
+				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
+				.catalyst(AllBlocks.BASIN::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), Items.CRAFTING_TABLE)
+				.emptyBackground(177, 85)
+				.build("automatic_shapeless", MixingCategory::autoShapeless),
 
-			brewing =
-				register("automatic_brewing", MixingCategory::autoBrewing).addRecipes(() -> PotionMixingRecipes.ALL)
-					.catalyst(AllBlocks.MECHANICAL_MIXER::get)
-					.catalyst(AllBlocks.BASIN::get)
-					.build(),
+		brewing = builder(BasinRecipe.class)
+				.enableWhen(c -> c.allowBrewingInMixer)
+				.addRecipes(() -> PotionMixingRecipes.ALL)
+				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
+				.catalyst(AllBlocks.BASIN::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), Blocks.BREWING_STAND)
+				.emptyBackground(177, 103)
+				.build("automatic_brewing", MixingCategory::autoBrewing),
 
-			sawing = register("sawing", SawingCategory::new).addTypedRecipes(AllRecipeTypes.CUTTING)
-				.catalyst(AllBlocks.MECHANICAL_SAW::get)
-				.build(),
-
-			blockCutting =
-				register("block_cutting", () -> new BlockCuttingCategory(Items.STONE_BRICK_STAIRS))
-					.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(
-						RecipeType.STONECUTTING, recipe -> AllRecipeTypes.shouldIgnoreInAutomation(recipe))))
-					.catalyst(AllBlocks.MECHANICAL_SAW::get)
-					.enableWhen(c -> c.allowStonecuttingOnSaw)
-					.build(),
-
-			woodCutting = register("wood_cutting", () -> new BlockCuttingCategory(Items.OAK_STAIRS))
-				.addRecipes(() -> CondensedBlockCuttingRecipe
-					.condenseRecipes(getTypedRecipesExcluding(SawTileEntity.woodcuttingRecipeType.get(),
-						recipe -> AllRecipeTypes.shouldIgnoreInAutomation(recipe))))
-				.catalyst(AllBlocks.MECHANICAL_SAW::get)
-				.enableWhenBool(c -> c.allowWoodcuttingOnSaw.get() && ModList.get()
-					.isLoaded("druidcraft"))
-				.build(),
-
-			packing = register("packing", PackingCategory::standard).addTypedRecipes(AllRecipeTypes.COMPACTING)
+		packing = builder(BasinRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.COMPACTING)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 				.catalyst(AllBlocks.BASIN::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.MECHANICAL_PRESS.get(), AllBlocks.BASIN.get())
+				.emptyBackground(177, 103)
+				.build("packing", PackingCategory::standard),
 
-			autoSquare = register("automatic_packing", PackingCategory::autoSquare)
-				.addAllRecipesIf(
-					r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
-						&& MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-					BasinRecipe::convertShapeless)
-				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
-				.catalyst(AllBlocks.BASIN::get)
+		autoSquare = builder(BasinRecipe.class)
 				.enableWhen(c -> c.allowShapedSquareInPress)
-				.build(),
+				.addAllRecipesIf(
+						r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
+								&& MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+						BasinRecipe::convertShapeless)
+				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
+				.catalyst(AllBlocks.BASIN::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_PRESS.get(), Blocks.CRAFTING_TABLE)
+				.emptyBackground(177, 85)
+				.build("automatic_packing", PackingCategory::autoSquare),
 
-			polishing = register("sandpaper_polishing", PolishingCategory::new)
+		sawing = builder(CuttingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.CUTTING)
+				.catalyst(AllBlocks.MECHANICAL_SAW::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_SAW.get(), Items.OAK_LOG)
+				.emptyBackground(177, 70)
+				.build("sawing", SawingCategory::new),
+
+		blockCutting = builder(CondensedBlockCuttingRecipe.class)
+				.enableWhen(c -> c.allowStonecuttingOnSaw)
+				.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(RecipeType.STONECUTTING, AllRecipeTypes::shouldIgnoreInAutomation)))
+				.catalyst(AllBlocks.MECHANICAL_SAW::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_SAW.get(), Items.STONE_BRICK_STAIRS)
+				.emptyBackground(177, 70)
+				.build("block_cutting", BlockCuttingCategory::new),
+
+		woodCutting = builder(CondensedBlockCuttingRecipe.class)
+				.enableIf(c -> c.allowWoodcuttingOnSaw.get() && ModList.get()
+						.isLoaded("druidcraft"))
+				.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(SawTileEntity.woodcuttingRecipeType.get(), AllRecipeTypes::shouldIgnoreInAutomation)))
+				.catalyst(AllBlocks.MECHANICAL_SAW::get)
+				.doubleItemIcon(AllBlocks.MECHANICAL_SAW.get(), Items.OAK_STAIRS)
+				.emptyBackground(177, 70)
+				.build("wood_cutting", BlockCuttingCategory::new),
+
+		polishing = builder(SandPaperPolishingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING)
 				.catalyst(AllItems.SAND_PAPER::get)
 				.catalyst(AllItems.RED_SAND_PAPER::get)
-				.build(),
+				.itemIcon(AllItems.SAND_PAPER.get())
+				.emptyBackground(177, 55)
+				.build("sandpaper_polishing", PolishingCategory::new),
 
-			deploying = register("deploying", DeployingCategory::new).addTypedRecipes(AllRecipeTypes.DEPLOYING)
+		item_application = builder(ItemApplicationRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION)
+				.addRecipes(LogStrippingFakeRecipes::createRecipes)
+				.itemIcon(AllItems.BRASS_HAND.get())
+				.emptyBackground(177, 60)
+				.build("item_application", ItemApplicationCategory::new),
+
+		deploying = builder(DeployerApplicationRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.DEPLOYING)
 				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING::getType, DeployerApplicationRecipe::convert)
+				.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION::getType, ManualApplicationRecipe::asDeploying)
 				.catalyst(AllBlocks.DEPLOYER::get)
 				.catalyst(AllBlocks.DEPOT::get)
 				.catalyst(AllItems.BELT_CONNECTOR::get)
-				.build(),
+				.itemIcon(AllBlocks.DEPLOYER.get())
+				.emptyBackground(177, 70)
+				.build("deploying", DeployingCategory::new),
 
-			mysteryConversion = register("mystery_conversion", MysteriousItemConversionCategory::new)
-				.addRecipes(() -> MysteriousItemConversionCategory.RECIPES)
-				.build(),
-
-			spoutFilling = register("spout_filling", SpoutCategory::new).addTypedRecipes(AllRecipeTypes.FILLING)
+		spoutFilling = builder(FillingRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.FILLING)
 				.addRecipeListConsumer(recipes -> SpoutCategory.consumeRecipes(recipes::add, ingredientManager))
 				.catalyst(AllBlocks.SPOUT::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.SPOUT.get(), Items.WATER_BUCKET)
+				.emptyBackground(177, 70)
+				.build("spout_filling", SpoutCategory::new),
 
-			draining = register("draining", ItemDrainCategory::new)
+		draining = builder(EmptyingRecipe.class)
 				.addRecipeListConsumer(recipes -> ItemDrainCategory.consumeRecipes(recipes::add, ingredientManager))
 				.addTypedRecipes(AllRecipeTypes.EMPTYING)
 				.catalyst(AllBlocks.ITEM_DRAIN::get)
-				.build(),
+				.doubleItemIcon(AllBlocks.ITEM_DRAIN.get(), Items.WATER_BUCKET)
+				.emptyBackground(177, 50)
+				.build("draining", ItemDrainCategory::new),
 
-			autoShaped = register("automatic_shaped", MechanicalCraftingCategory::new)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-					&& r.getIngredients()
-						.size() == 1
-					&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
-				.addTypedRecipesIf(() -> RecipeType.CRAFTING,
-					recipe -> recipe instanceof IShapedRecipe<?> && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
-				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
+		autoShaped = builder(CraftingRecipe.class)
 				.enableWhen(c -> c.allowRegularCraftingInCrafter)
-				.build(),
+				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
+						&& r.getIngredients()
+						.size() == 1
+						&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
+				.addTypedRecipesIf(() -> RecipeType.CRAFTING,
+						recipe -> recipe instanceof IShapedRecipe<?> && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
+				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
+				.itemIcon(AllBlocks.MECHANICAL_CRAFTER.get())
+				.emptyBackground(177, 107)
+				.build("automatic_shaped", MechanicalCraftingCategory::new),
 
-			mechanicalCrafting = register("mechanical_crafting", MechanicalCraftingCategory::new)
+		mechanicalCrafting = builder(CraftingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.MECHANICAL_CRAFTING)
 				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
-				.build();
+				.itemIcon(AllBlocks.MECHANICAL_CRAFTER.get())
+				.emptyBackground(177, 107)
+				.build("mechanical_crafting", MechanicalCraftingCategory::new),
+
+		seqAssembly = builder(SequencedAssemblyRecipe.class)
+				.addTypedRecipes(AllRecipeTypes.SEQUENCED_ASSEMBLY)
+				.itemIcon(AllItems.PRECISION_MECHANISM.get())
+				.emptyBackground(180, 115)
+				.build("sequenced_assembly", SequencedAssemblyCategory::new),
+
+		mysteryConversion = builder(ConversionRecipe.class)
+				.addRecipes(() -> MysteriousItemConversionCategory.RECIPES)
+				.itemIcon(AllBlocks.PECULIAR_BELL.get())
+				.emptyBackground(177, 50)
+				.build("mystery_conversion", MysteriousItemConversionCategory::new);
 
 	}
 
-	private <T extends Recipe<?>> CategoryBuilder<T> register(String name, Supplier<CreateRecipeCategory<T>> supplier) {
-		return new CategoryBuilder<T>(name, supplier);
+	private <T extends Recipe<?>> CategoryBuilder<T> builder(Class<? extends T> recipeClass) {
+		return new CategoryBuilder<>(recipeClass);
 	}
 
 	@Override
@@ -241,36 +325,36 @@ public class CreateJEI implements IModPlugin {
 	}
 
 	@Override
-	public void registerRecipeTransferHandlers(IRecipeTransferRegistration registration) {
-		registration.addRecipeTransferHandler(new BlueprintTransferHandler(), VanillaRecipeCategoryUid.CRAFTING);
-	}
-
-	@Override
 	public void registerCategories(IRecipeCategoryRegistration registration) {
 		loadCategories();
 		registration.addRecipeCategories(allCategories.toArray(IRecipeCategory[]::new));
 	}
 
 	@Override
-	public void registerFluidSubtypes(ISubtypeRegistration registration) {
-		PotionFluidSubtypeInterpreter interpreter = new PotionFluidSubtypeInterpreter();
-		PotionFluid potionFluid = AllFluids.POTION.get();
-		registration.registerSubtypeInterpreter(potionFluid.getSource(), interpreter);
-		registration.registerSubtypeInterpreter(potionFluid.getFlowing(), interpreter);
-	}
-
-	@Override
 	public void registerRecipes(IRecipeRegistration registration) {
 		ingredientManager = registration.getIngredientManager();
-		allCategories.forEach(c -> c.recipes.forEach(s -> registration.addRecipes(s.get(), c.getUid())));
 
-		registration.addRecipes(ToolboxColoringRecipeMaker.createRecipes()
-			.collect(Collectors.toList()), VanillaRecipeCategoryUid.CRAFTING);
+		allCategories.forEach(c -> c.registerRecipes(registration));
+
+		registration.addRecipes(RecipeTypes.CRAFTING, ToolboxColoringRecipeMaker.createRecipes().toList());
 	}
 
 	@Override
 	public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
-		allCategories.forEach(c -> c.recipeCatalysts.forEach(s -> registration.addRecipeCatalyst(s.get(), c.getUid())));
+		allCategories.forEach(c -> c.registerCatalysts(registration));
+	}
+
+	@Override
+	public void registerRecipeTransferHandlers(IRecipeTransferRegistration registration) {
+		registration.addRecipeTransferHandler(new BlueprintTransferHandler(), RecipeTypes.CRAFTING);
+	}
+
+	@Override
+	public void registerFluidSubtypes(ISubtypeRegistration registration) {
+		PotionFluidSubtypeInterpreter interpreter = new PotionFluidSubtypeInterpreter();
+		PotionFluid potionFluid = AllFluids.POTION.get();
+		registration.registerSubtypeInterpreter(ForgeTypes.FLUID_STACK, potionFluid.getSource(), interpreter);
+		registration.registerSubtypeInterpreter(ForgeTypes.FLUID_STACK, potionFluid.getFlowing(), interpreter);
 	}
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -281,32 +365,46 @@ public class CreateJEI implements IModPlugin {
 		registration.addGhostIngredientHandler(AbstractFilterScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(BlueprintScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(LinkedControllerScreen.class, new GhostIngredientHandler());
+		registration.addGhostIngredientHandler(ScheduleScreen.class, new GhostIngredientHandler());
 	}
 
 	private class CategoryBuilder<T extends Recipe<?>> {
-		private CreateRecipeCategory<T> category;
-		private List<Consumer<List<Recipe<?>>>> recipeListConsumers = new ArrayList<>();
-		private Predicate<CRecipes> pred;
+		private final Class<? extends T> recipeClass;
+		private Predicate<CRecipes> predicate = cRecipes -> true;
 
-		public CategoryBuilder(String name, Supplier<CreateRecipeCategory<T>> category) {
-			this.category = category.get();
-			this.category.setCategoryId(name);
-			pred = Predicates.alwaysTrue();
+		private IDrawable background;
+		private IDrawable icon;
+
+		private final List<Consumer<List<T>>> recipeListConsumers = new ArrayList<>();
+		private final List<Supplier<? extends ItemStack>> catalysts = new ArrayList<>();
+
+		public CategoryBuilder(Class<? extends T> recipeClass) {
+			this.recipeClass = recipeClass;
 		}
 
-		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<Recipe<?>>> consumer) {
+		public CategoryBuilder<T> enableIf(Predicate<CRecipes> predicate) {
+			this.predicate = predicate;
+			return this;
+		}
+
+		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBool> configValue) {
+			predicate = c -> configValue.apply(c).get();
+			return this;
+		}
+
+		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<T>> consumer) {
 			recipeListConsumers.add(consumer);
 			return this;
 		}
 
-		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends Recipe<?>>> collection) {
+		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends T>> collection) {
 			return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
 		}
 
 		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
 			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
 				if (pred.test(recipe)) {
-					recipes.add(recipe);
+					recipes.add((T) recipe);
 				}
 			}));
 		}
@@ -324,19 +422,15 @@ public class CreateJEI implements IModPlugin {
 		}
 
 		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipes::add, recipeType.get()));
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType,
-			Function<Recipe<?>, T> converter) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipe -> {
-				recipes.add(converter.apply(recipe));
-			}, recipeType.get()));
+		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType,
-			Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipe -> {
+		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
 				if (pred.test(recipe)) {
 					recipes.add(recipe);
 				}
@@ -347,7 +441,7 @@ public class CreateJEI implements IModPlugin {
 			Supplier<RecipeType<? extends T>> excluded) {
 			return addRecipeListConsumer(recipes -> {
 				List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
-				consumeTypedRecipes(recipe -> {
+				CreateJEI.<T>consumeTypedRecipes(recipe -> {
 					for (Recipe<?> excludedRecipe : excludedRecipes) {
 						if (doInputsMatch(recipe, excludedRecipe)) {
 							return;
@@ -372,39 +466,61 @@ public class CreateJEI implements IModPlugin {
 			});
 		}
 
+		public CategoryBuilder<T> catalystStack(Supplier<ItemStack> supplier) {
+			catalysts.add(supplier);
+			return this;
+		}
+
 		public CategoryBuilder<T> catalyst(Supplier<ItemLike> supplier) {
 			return catalystStack(() -> new ItemStack(supplier.get()
 				.asItem()));
 		}
 
-		public CategoryBuilder<T> catalystStack(Supplier<ItemStack> supplier) {
-			category.recipeCatalysts.add(supplier);
+		public CategoryBuilder<T> icon(IDrawable icon) {
+			this.icon = icon;
 			return this;
 		}
 
-		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBool> configValue) {
-			pred = c -> configValue.apply(c)
-				.get();
+		public CategoryBuilder<T> itemIcon(ItemLike item) {
+			icon(new ItemIcon(() -> new ItemStack(item)));
 			return this;
 		}
 
-		public CategoryBuilder<T> enableWhenBool(Function<CRecipes, Boolean> configValue) {
-			pred = configValue::apply;
+		public CategoryBuilder<T> doubleItemIcon(ItemLike item1, ItemLike item2) {
+			icon(new DoubleItemIcon(() -> new ItemStack(item1), () -> new ItemStack(item2)));
 			return this;
 		}
 
-		public CreateRecipeCategory<T> build() {
-			if (pred.test(AllConfigs.SERVER.recipes))
-				category.recipes.add(() -> {
-					List<Recipe<?>> recipes = new ArrayList<>();
-					for (Consumer<List<Recipe<?>>> consumer : recipeListConsumers)
+		public CategoryBuilder<T> background(IDrawable background) {
+			this.background = background;
+			return this;
+		}
+
+		public CategoryBuilder<T> emptyBackground(int width, int height) {
+			background(new EmptyBackground(width, height));
+			return this;
+		}
+
+		public CreateRecipeCategory<T> build(String name, CreateRecipeCategory.Factory<T> factory) {
+			Supplier<List<T>> recipesSupplier;
+			if (predicate.test(AllConfigs.SERVER.recipes)) {
+				recipesSupplier = () -> {
+					List<T> recipes = new ArrayList<>();
+					for (Consumer<List<T>> consumer : recipeListConsumers)
 						consumer.accept(recipes);
 					return recipes;
-				});
+				};
+			} else {
+				recipesSupplier = () -> Collections.emptyList();
+			}
+
+			CreateRecipeCategory.Info<T> info = new CreateRecipeCategory.Info<>(
+					new mezz.jei.api.recipe.RecipeType<>(Create.asResource(name), recipeClass),
+					Lang.translateDirect("recipe." + name), background, icon, recipesSupplier, catalysts);
+			CreateRecipeCategory<T> category = factory.create(info);
 			allCategories.add(category);
 			return category;
 		}
-
 	}
 
 	public static void consumeAllRecipes(Consumer<Recipe<?>> consumer) {
@@ -415,13 +531,12 @@ public class CreateJEI implements IModPlugin {
 			.forEach(consumer);
 	}
 
-	public static void consumeTypedRecipes(Consumer<Recipe<?>> consumer, RecipeType<?> type) {
+	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
 		Map<ResourceLocation, Recipe<?>> map = Minecraft.getInstance()
 			.getConnection()
 			.getRecipeManager().recipes.get(type);
 		if (map != null) {
-			map.values()
-				.forEach(consumer);
+			map.values().forEach(recipe -> consumer.accept((T) recipe));
 		}
 	}
 
@@ -450,11 +565,9 @@ public class CreateJEI implements IModPlugin {
 		if (matchingStacks.length == 0) {
 			return false;
 		}
-		if (recipe2.getIngredients()
-			.get(0)
-			.test(matchingStacks[0]))
-			return true;
-		return false;
+		return recipe2.getIngredients()
+				.get(0)
+				.test(matchingStacks[0]);
 	}
 
 }
